<resources>
    <string name="app_name">Talk To Me</string>
    <string name="rDerecha">Rotacion Derecha</string>
    <string name="rIzquierda">Rotacion Izquierda</string>
    <string name="notsensor">No cuenta con acelerometro</string>
    <string name="enssayo3">No se que putas haga</string>
    <string name="Bienvenido">Bienvenid@ a</string>
    <string name="Rol">Escoge tu rol en</string>
    <string name="Talker">Talker</string>
    <string name="Profesional">Profesional</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RecContrasena">Recuperar contraseña</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Fecha">Fecha de nacimiento</string>
    <string name="fecha_cita">Fecha: </string>
    <string name="TipoId">TipoId</string>
    <string name="NId">Número de Id</string>
    <string name="Cel">Celular</string>
    <string name="Correo">Correo</string>
    <string name="Contrasena">Contraseña</string>
    <string name="Confirma">Confirma tu Contraseña</string>
    <string name="InicioSesion">Iniciar Sesión</string>
    <string name="Crea">Crea una Cuenta</string>
    <string name="Modalidad">Elige la modalidad para tus citas</string>
    <string name="Virtual">Video llamada</string>
    <string name="Llamada">Llamada</string>
    <string name="Chat">Chat</string>
    <string name="Presencial">Presencial</string>
    <string name="CC">Cédula de Ciudadanía</string>
    <string name="TI">Tarjeta de Identidad</string>
    <string name="CE">Cédula de Extranjería</string>
    <string name="RC">Registro Civil</string>
    <string name="Ubicacion">Dirección</string>
    <string name="Parte">Ahora eres parte de</string>
    <string name="txtProfesional">Aquí puedes ver los detalles sobre el Profesional</string>
    <string name="Descripcion">Descripción</string>
    <string name="Especialidad">Especialidad</string>
    <string name="Educacion">Educación</string>
    <string name="Certificado">Certificado</string>
    <string name="Modalidad2">Modalidad</string>
    <string name="Disponible">Disponible</string>
    <string name="NoDisponible">No Disponible</string>
    <string name="Cita">Solicitar una Cita</string>
    <string name="cita_con">Cita con: </string>
    <string name="titulo_diagnostico">Diagnóstico</string>
    <string name="titulo_notificaiones">Notificaciones</string>
    <string name="informacion_diagnostico">Aquí puedes ver tus diagnósticos</string>
    <string name="informacion_notificaiones">Aquí puedes ver tus notificaciones</string>
    <string name="titulo_citas">Citas</string>
    <string name="informacion_citas">Aquí puedes ver tus citas</string>
    <string name="informacion_detalle_citas">Aquí puedes ver tu cita con más detalles</string>
    <string name="titulo_profesionales">Profesionales</string>
    <string name="informacion_profesionales">Aquí puedes ver los profesionales disponibles</string>
    <string name="mostar_ubicación">Mostrar ubicación en el mapa</string>
    <string name="bienvenida">Bienvenido a Talk To Me</string>
    <string name="mensaje">Cuida tu salud mental desde cualquier lugar</string>
    <string name="mi_historial">Mi historial</string>
    <string name="mis_diagnoticos">Mis diagnósticos</string>
    <string name="mis_citas">Mis citas</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="content_request">Aquí puedes ver las citas solicitadas</string>
    <string name="content_certificates">Aquí puedes ver tus certificados</string>
    <string name="content_patients">Aquí puedes ver tus pacientes</string>
    <string name="content_detailsAppoProfessinal">Aquí puedes ver tus citas programadas</string>
    <string name="boton_getionarCita">Gestionar Cita</string>
    <string name="boton_confirmarCita">Confirmar Cita</string>
    <string name="boton_reprogramar_cita">Reprogramar Cita</string>
    <string name="boton_cancelar_cita">Cancelar Cita</string>
    <string name="boton_getionarPerfil">Editar</string>
    <string name="titlePerfilTalker">Mi Perfil</string>
    <string name="contentPerfilTalker">Aquí puedes ver la información que aparece en tu perfil</string>
    <string name="contentDetailsDiagnostic">Aquí puedes ver los detalles de tu diagnóstico</string>
    <string name="domingo">DO</string>
    <string name="lunes">LU</string>
    <string name="martes">MA</string>
    <string name="miercoles">MI</string>
    <string name="jueves">JU</string>
    <string name="viernes">VI</string>
    <string name="sabado">SA</string>
    <string name="mesAnterior"><![CDATA[<-]]></string>
    <string name="mesProximo"><![CDATA[->]]></string>
    <string name="scroll">Scroll</string>
    <string name="mis_certificados">Mis certificados</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="mis_pacientes">Mis pacientes</string>
    <string name="pacientes">Pacientes</string>
    <string name="titulo_history">History</string>
    <string name="informacion_history">Aquí puedes ver tu historial</string>
    <string name="informacion_history_por">Realizado por: </string>
    <string name="informacion_history_date">Date: </string>
    <string name="informacion_history_date_description">21/06/2022</string>
    <string name="informacion_history_diagnostic">Diagnostic: </string>
    <string name="informacion_history_diagnostic_description">Trauma </string>
    <string name="mis_certifications">Mis certificaciones</string>
    <string name="mis_peticiones">Mis peticiones</string>
    <string name="edad">Edad</string>
    <string name="errorContrasena">Las contraseñas no coinciden, vuelva a intentarlo</string>


    <string name="snackBar_dismiss_label">cerrar</string>
    <string name="home_label">Hola %1$s, con id %2$s</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="signup_label">SignUp</string>
    <string name="login_label">Login</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="mail_error_label">El email no puede estar vacio.</string>
    <string name="error_pass_label">La contraseña no puede estar vacia.</string>
    <string name="create_user_button_label">Create User</string>
    <string name="name_label">Name</string>
    <string name="create_a_new_profile">Create a new Profile</string>
    <string name="phone_label">Phone</string>
    <string name="logout_menu_item">Lougout</string>
    <string name="message_chat_hint">Message</string>

    <!--Mapas-->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fix_position_label">Mover el mapa con la posición del usuario?</string>
    <string name="direction_field_label">Dirección</string>
    <string name="search_button_label">Buscar</string>

    <!--Cámara-->
    <string name="snackbar_dismiss_label">Cerrar</string>
    <string name="start_camara">Camara</string>
    <string name="seleccion_imagen">Seleccionar Imagen</string>
    <string name="camera_intent">Camara</string>
    <string name="camerax_intent">CameraX</string>
    <string name="permission_denied_label">No pude obtener el permiso necesario</string>
    <string name="capture_saved">Imagen guardada correctamente.</string>
    <string name="nuevo_certificado">Agregar certificado</string>
    <string name="nombre_titulo">Titulo</string>
    <string name="nombre_institucion">Institucion</string>
    <string name="tomar_Img">CAMARA</string>
    <string name="cargar_Img">GALERIA</string>
    <string name="fecha_certificado">Fecha Expedicion</string>

</resources>