<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AppointmentsProfesionalActivity"
    android:background="@color/blue_bckgr2"
    android:padding="15dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_bckgr3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conteinerInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pincipalLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/principalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_citas"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"
                android:transitionName="textTrans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/informacion_citas"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:transitionName="textTrans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/principalTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/pincipalLogo"
            android:layout_width="78dp"
            android:layout_height="68dp"
            android:src="@drawable/citas"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/conteinerInformation"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerMedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerSuperior"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerSuperior"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/containerMenu"
        android:padding="10dp"
        app:circularflow_defaultRadius="10dp">

        <LinearLayout
            android:id="@+id/cabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"

            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mesAnterior"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="previousMonthAction"
                android:textSize="20sp"
                android:backgroundTint="@color/white" />

            <TextView
                android:id="@+id/monthYearTV"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="Feb 2021"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mesProximo"
                android:textColor="@color/blue"
                android:background="@null"
                android:textStyle="bold"
                android:onClick="nextMonthAction"
                android:textSize="20sp"
                android:backgroundTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cabecera">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/domingo"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lunes"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/martes"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/miercoles"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jueves"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/viernes"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sabado"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:paddingTop="0dp"
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_below="@id/containerMedio"
        android:background="@color/white" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarRecyclerView">

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/perfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnNotification"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/notificacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPerfil"
            app:layout_constraintStart_toEndOf="@+id/btnPerfilProfesional"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnPerfilProfesional"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/lupa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>