<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/blue_bckgr2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="343dp"
        android:scaleType="fitXY"
        android:transitionName="imgTrans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="323dp"
        android:layout_height="260dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:transitionName="linearTrans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/rolTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Rol"
            android:textAlignment="center"
            android:textColor="@color/blue_btn"
            android:textSize="34sp"
            android:textStyle="bold"
            android:transitionName="textTrans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_Paciente"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/Talker"
                    android:textAlignment="textStart"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/radio_Profesional"
                    style="@style/Widget.Material3.CompoundButton.RadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/Profesional"
                    android:textSize="25sp" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btn_registrarse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:backgroundTint="@color/blue_btn"
            android:text="@string/Registrarse"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>